hero text overflowing bug

--- a/src/components/sections/sectionHero.module.scss
+++ b/src/components/sections/sectionHero.module.scss
@@ -134,6 +134,9 @@
 
 		@include media-breakpoint-up(lg) {
 			@include fontSize(90, 90);
+		}
+
+		@include media-breakpoint-up(xl) {
 			white-space: nowrap;
 		}
 	}
